<resources>
    <string name="app_name">XtremeApp</string>

    <!--Pantalla de carga-->
    <string name="copyright_1">Xtreme Multipagos</string>
    <string name="copyright_2">by</string>
    <string name="copyright_3">Grupo Xtreme</string>

    <!--Menu-->
    <string name="item_1">TAE</string>
    <string name="item_2">Servicios</string>
    <string name="item_3">Mi cuenta</string>


    <!--Main Activity/ Login-->
    <string name="usuario">Usuario</string>
    <string name="operador">Clave Operador</string>
    <string name="contraseña">Contraseña</string>
    <string name="checkbox">Mantener sesión iniciada</string>
    <string name="btnLogin">Iniciar sesión</string>

    <!--Inicio-->
    <string name="inicio_btn">Cerrar Sesión</string>

    <!--Progress Dialog-->
    <string name="iniciando">Iniciando Sesión</string>
    <string name="no_sesion">Algo ha salido mal, intente nuevamente</string>
    <string name="btnRetry">Intentar</string>
    <string name="cerrando">Cerrando sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--Fragments-->
    <string name="taefragment">Tae Recargas</string>
    <string name="servicefragment">Servicios pago</string>
    <string name="userfragment">Mi cuenta</string>

    <!--Fragmento TAE-->
    <string name="tae_pantalla">Elige un producto</string>

    <!--Fragmento Servicios-->
    <string name="servicio_pantalla">Elige un servicio</string>

    <!--Fragmento User-->
    <string name="btn_saldo">Saldo Disponible</string>
    <string name="btn_pago">Reportar Pago</string>
    <string name="btn_ventas">Ventas recientes</string>

    <!--SearchView-->
    <string name="search">Buscar</string>
    <string name="search_hint">Buscar producto</string>

</resources>