<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/animation_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tool:ignore="UselessParent"
        android:paddingTop="30dp"
        >

        <!--Animation Files-->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_carga"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="color-logo.json" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/copyright_1"
                android:textColor="@color/letters_1"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                />

            <TextView
                android:id="@+id/copyright_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="2dp"

                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/copyright_2"
                android:textColor="@color/letters_1"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/copyright_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/copyright_3"
                android:textColor="@color/letters_2"
                android:textSize="18sp"
                />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>